--- a/sections.css
+++ b/sections.css
@@ -83,6 +83,7 @@
     text-decoration: none;
     font-size: 4vw;
     line-height: 7vw;
+    white-space: nowrap;
 }
 .faq > .question::after {
     content: "\25bc";
