--- a/styles.css
+++ b/styles.css
@@ -14,10 +14,10 @@ html {
 
 body {
     font-family: 'Source Sans Pro', sans-serif;
-    background: url("resources/backgroundimg(1).png");
-    background-size: auto 130%;
+    background: url("resources/backgroundimg(1)_seamless_y.png");
+    background-size: auto 200%;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: top;
     background-attachment: fixed;
     padding: 0;
     margin: 0;
